Add backend time comunication?

--- a/Web.config
+++ b/Web.config
@@ -12,4 +12,11 @@
     <compilation debug="true" targetFramework="4.8"/>
     <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
+    <system.web.extensions>
+		<scripting>
+			<webServices>
+				<jsonSerialization maxJsonLength="5000000"/>
+			</webServices>
+		</scripting>
+	</system.web.extensions>
 </configuration>
